# siem

./: .gitignore  INSTALL.md  PROJECT_REPORT.md  README.md  aegis_cli.py  main.py  pyproject.toml  requirements.txt  sentinel_cli.py
aegis_siem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
alerts/: alert_manager.py
analyzer/: atrs_engine.py  campaign_engine.py  detection_engine.py  dna_engine.py  entropy_engine.py  feedback_engine.py  narrative_engine.py  prediction_engine.py  reputation_engine.py  srtc_engine.py  temporal_fingerprint_engine.py  velocity_engine.py
collector/: log_collector.py  macos_log_collector.py  syslog_listener.py
dashboard/: app.py
dashboard/static/: style.css
dashboard/templates/: _navbar.html  alerts.html  analysis.html  compliance.html  correlation.html  dna.html  home.html  index.html  intelligence.html  live_logs.html  logs.html  narrative.html  prediction.html  report_export.html  reputation.html  simulator.html
docs/: PROJECT_REPORT.md  REPORT_ORGANIZATION.md
parser/: log_parser.py
sentinel_siem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
storage/: alerts.json  entropy.json  events.json  feedback.json  ingest_config.json  predictions.json  reputation.json  srtc.json  tbf.json  velocity.json
