[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "aegis-siem"
version         = "1.0.0"
description     = "Novel SIEM tool with ATRS (Adaptive Threat Risk Score) — multi-dimensional entity risk scoring for macOS security monitoring"
readme          = "README.md"
requires-python = ">=3.9"
license         = { text = "MIT" }

keywords = [
    "siem", "security", "monitoring", "threat-detection",
    "entropy", "markov", "mitre-attack", "cybersecurity", "atrs"
]

dependencies = [
    "flask>=3.0",
]

[project.scripts]
aegis = "aegis_cli:main"

[tool.setuptools]
py-modules = ["aegis_cli", "main"]

[tool.setuptools.packages.find]
where     = ["."]
include   = ["collector*", "parser*", "analyzer*", "alerts*", "dashboard*"]

[tool.setuptools.package-data]
"dashboard" = ["templates/**", "static/**"]

